# IOS-Keyboard

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32c3
Documentation/: IOS-Keyboard-fsd.md  iOS-Voice-Dictation-Commands.md  iphone_functional_description.md
esp32/: CLAUDE.md
esp32/main/: command_parser.c  command_parser.h  config.h  debug_server.c  debug_server.h  keyboard_layout.c  keyboard_layout.h  main.c  ota_handler.h  usb_hid.c  usb_hid.h  wifi_manager.h
esp32/projects/IOS-Keyboard/: CMakeLists.txt
esp32/projects/IOS-Keyboard/main/: CMakeLists.txt  captive_portal.c  command_parser.c  command_parser.h  debug_server.c  debug_server.h  idf_component.yml  main.c  usb_hid.h
ios/: README.md
ios/IOS-Keyboard-App/: ContentView.swift  IOS_Keyboard_AppApp.swift  Info.plist
ios/IOS-Keyboard-App.xcodeproj/: project.pbxproj
ios/IOS-Keyboard-App/Services/: BluetoothService.swift  SpeechRecognitionService.swift  TextDiffService.swift  ToneDetectorService.swift
ios/IOS-Keyboard-App/ViewModels/: MainViewModel.swift
ios/IOS-Keyboard-App/Views/: DeviceListView.swift
main/: CMakeLists.txt  ble_gatt.c  ble_gatt.h  captive_portal.h  config.h  debug_server.c  idf_component.yml  main.c  ota_handler.c  wifi_manager.c
src/: captive_portal.c  captive_portal.h  debug_server.h  main.c  wifi_manager.c  wifi_manager.h
